...
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/new_task"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:hint=""
                        android:textColor="@color/colorGrey"
                        android:textCursorDrawable="@drawable/cursor"
...
                        android:src="@color/colorAccent" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="17dp"
            android:clickable="true"
...
