<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/constr"
    tools:context="com.carpediemsolution.dailynotes.tasks_list.MainActivity">

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/ActionBar"
            app:titleTextColor="@color/colorWhite"
            app:subtitleTextColor="@color/colorWhite">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">
                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical|start"
                    android:drawableRight="@drawable/ic_action_search"
                    android:drawablePadding="5dp"
                    android:hint="@string/app_name"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_heading"
                    android:theme="@style/EditStyleForSearch" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/f1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="17dp"
        android:clickable="true"
        android:src="@drawable/ic_action_add"/>
    </RelativeLayout>
</LinearLayout>
</android.support.design.widget.CoordinatorLayout>
