...
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_4dp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_subheading"/>

            <TextView
                android:id="@+id/task_item_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_4dp"
                android:layout_below="@+id/date_item_text_view"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/text_subheading" />
...
